force-app/main/default/objects/Tag__c/fields/Correct__c.field-meta.xml
<CustomField>
    <fullName>Correct__c</fullName>
    <label>Correct</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>