force-app/main/default/objects/Tag__c/fields/Correct_Pct__c.field-meta.xml
<CustomField>
    <fullName>Correct_Pct__c</fullName>
    <formula>Correct__c / ( Correct__c +  Incorrect__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Correct Pct</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>