force-app/main/default/objects/Tag__c/fields/Exam_Instance_External_Id__c.field-meta.xml
<CustomField>
    <fullName>Exam_Instance_External_Id__c</fullName>
    <externalId>true</externalId>
    <label>Exam Instance External Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>