force-app/main/default/objects/Tag__c/fields/Incorrect__c.field-meta.xml
<CustomField>
    <fullName>Incorrect__c</fullName>
    <description>Includes wrong + omits</description>
    <label>Incorrect</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>