force-app/main/default/objects/Tag__c/fields/My_Exam__c.field-meta.xml
<CustomField>
    <fullName>My_Exam__c</fullName>
    <label>My Exam</label>
    <referenceTo>Exam_Instance__c</referenceTo>
    <relationshipLabel>Tags</relationshipLabel>
    <relationshipName>Tags</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>