force-app/main/default/objects/Tag__c/fields/Omit__c.field-meta.xml
<CustomField>
    <fullName>Omit__c</fullName>
    <description>Included in Incorrect Score</description>
    <label>Omit</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>