force-app/main/default/objects/Tag__c/fields/Tag_Key__c.field-meta.xml
<CustomField>
    <fullName>Tag_Key__c</fullName>
    <label>Tag Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>