force-app/main/default/objects/Tag__c/fields/Tag_Level__c.field-meta.xml
<CustomField>
    <fullName>Tag_Level__c</fullName>
    <label>Tag Level</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>