force-app/main/default/objects/Tag__c/fields/Test_Taker__c.field-meta.xml
<CustomField>
    <fullName>Test_Taker__c</fullName>
    <label>Test Taker</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Tags</relationshipLabel>
    <relationshipName>Tags</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>